Redesign GenerateTimetableHandler